separated rubiks cube into points

--- a/edit/cube/cube.html
+++ b/edit/cube/cube.html
@@ -64,15 +64,24 @@ main()
 <script type="text/javascript" src="cube.js"></script>
 
 <body>
-<canvas id="gl-canvas" width="512"" height="512">
+<canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 
-<br/>
+<p></p>
 
-<button id= "xButton">Rotate X</button>
-<button id= "yButton">Rotate Y</button>
-<button id= "zButton">Rotate Z</button>
+<button id= "xButton">Rotate X 90</button>
+<button id= "yButton">Rotate Y 90</button>
+<button id= "zButton">Rotate Z 90</button>
+<p></p>
+<button id= "nxButton">Rotate X -90</button>
+<button id= "nyButton">Rotate Y -90</button>
+<button id= "nzButton">Rotate Z -90</button>
+<p></p>
+<button id = "Button1">Increase theta</button>
+<button id = "Button2">Decrease theta</button>
+<button id = "Button3">Increase phi</button>
+<button id = "Button4">Decrease phi</button>
 
 </body>
 </html>
