button rotations working

--- a/cube/cube.html
+++ b/cube/cube.html
@@ -68,13 +68,13 @@ Oops ... your browser doesn't support the HTML5 canvas element
 
 <p></p>
 
-<button id= "xButton">Rotate X 90</button>
-<button id= "yButton">Rotate Y 90</button>
-<button id= "zButton">Rotate Z 90</button>
+<button class="axisbutton" id= "xButton">Rotate X 90</button>
+<button class="axisbutton" id= "yButton">Rotate Y 90</button>
+<button class="axisbutton" id= "zButton">Rotate Z 90</button>
 <p></p>
-<button id= "nxButton">Rotate X -90</button>
-<button id= "nyButton">Rotate Y -90</button>
-<button id= "nzButton">Rotate Z -90</button>
+<button class="axisbutton" id= "nxButton">Rotate X -90</button>
+<button class="axisbutton" id= "nyButton">Rotate Y -90</button>
+<button class="axisbutton" id= "nzButton">Rotate Z -90</button>
 <p></p>
 <button id = "Button1">Increase theta</button>
 <button id = "Button2">Decrease theta</button>
